Add borders/own styling

--- a/mine.html
+++ b/mine.html
@@ -17,7 +17,7 @@
    </head>
    <body>
       <div class="container-grid">
-         <article class="box">
+         <article class="box one">
             <div class="header">
                <img src="./images/image-daniel.jpg" alt="" />
                <div class="text">
